# RenderEngine-OpenGL

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt  Makefile  cmake_install.cmake
Engine/include/: GLWindow.h  camera.h  graphics.h  mesh.h  shader.h  texture.h  window.h
Engine/src/: GLWindow.cpp  Graphics.cpp  camera.cpp  graphics.cpp  mesh.cpp  shader.cpp  texture.cpp  window.cpp
libs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/GLAD/cmake/: CMakeLists.txt  GladConfig.cmake  Makefile  cmake_install.cmake
libs/GLAD/include/glad/: glad.h
libs/GLAD/src/: glad.c
libs/GLFW/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/GLFW/docs/: Doxyfile  Makefile  cmake_install.cmake
libs/GLFW/src/: Makefile  cmake_install.cmake
libs/glad_cmake/: Makefile  cmake_install.cmake
main/: CMakeLists.txt  main.cpp
main/resources/shaders/: fragment.glsl  vertex.glsl
